# mirra-sdk

./: .gitignore  DEMO.md  HANDOFF_STATE.md  MCP.md  NORTH_STAR.md  README.md  ROBOT.md  SCOPE_MODEL.md  pyproject.toml  verify_continuity.py
.github/workflows/: boundary-gate.yml  pages.yml
demo/: demo_sdk.py
mirra/: __init__.py  continuity.py  demo.py  embodied.py  errors.py  execution.py  guard.py  identity.py  memory.py  person.py  verify_continuity.py  wrapper.py
mirra/adapters/: __init__.py  base.py  crewai.py  langchain.py  llamaindex.py  openai_agents.py
mirra_device/: __init__.py  core.py  qseal_lite.py  store.py  sync.py
mirra_gateway/: __init__.py  __main__.py  mission_control.py  server.py  tenants.py
mirra_mcp/: __init__.py  scoped_memory.py  server.py
scripts/: check_public_private_boundary.py
site/: index.html
tests/: conftest.py  test_adapters_import_guard.py  test_boundary.py  test_continuity.py  test_device_edge.py  test_differentiated_behavior.py  test_embodied.py  test_gateway.py  test_guard.py  test_langchain_adapter.py  test_mcp_scope_auth.py  test_mcp_server.py  test_mcp_trust_boundary.py  test_mission_control_adapter.py  test_packaged_demo.py  test_permissioned_execution.py  test_person_recognition.py  test_recognition.py  test_signed_memory.py
