[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirra-sdk"
version = "0.3.0"
description = "MIRRA platform SDK (Edge 1): one wrapper call gives any agent recognition, portable signed memory, per-relationship behavior, and permissioned execution over the frozen v1 core contract."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Shawn Cohen", email = "shawn@universalmediaus.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mirra-core-contract>=1.0.0",
    "cryptography>=41.0",
]

[project.scripts]
mirra-demo = "mirra.demo:main"

[project.optional-dependencies]
# Concrete core components. The SDK speaks only the contract; these provide the
# default backends when installed (local paths during the restructure).
execution = ["clawzero>=0.4.1"]
memory = ["clawseal>=1.1.7"]
# Framework adapters (whole-agent: identity + signed memory + enforcement).
langchain = ["langchain-core>=0.3"]
llamaindex = ["llama-index-core>=0.11"]
openai-agents = ["openai-agents>=0.1"]
crewai = ["crewai>=0.80"]
all = [
    "clawzero>=0.4.1", "clawseal>=1.1.7",
    "langchain-core>=0.3", "llama-index-core>=0.11",
    "openai-agents>=0.1", "crewai>=0.80",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mirra*"]
